addons/dashboard/manifests/ingress-traefik-secure/middleware.yaml
# SPDX-FileCopyrightText: © 2025 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

# https://doc.traefik.io/traefik/middlewares/http/forwardauth/
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-auth
  namespace: dashboard
spec:
  forwardAuth:
    address: "https://k2s.cluster.local/oauth2/auth"
    trustForwardHeader: true
    authResponseHeaders: 
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - Authorization
      - Set-Cookie
    tls:
      insecureSkipVerify: true
---
